# Projects-on-C

./: CMakeLists.txt
Lab1/: CMakeLists.txt
Lab1/Task1/: CMakeLists.txt  task1.c
Lab1/Task2/: CMakeLists.txt  task2.c
Lab1/Task3/: CMakeLists.txt  task3.c
Lab1/Task4/: CMakeLists.txt  task4.c
Lab1/Task5/: CMakeLists.txt  task5_func.c  task5_main.c
Lab1/Task6/: CMakeLists.txt  task6_func.c  task6_main.c
Lab1/Task7/: CMakeLists.txt  func.h  task7_func.c  task7_main.c
Lab1/Task8/: CMakeLists.txt
Lab2/: CMakeLists.txt
Lab2/Include/: head.h
Lab2/src_exe/: CMakeLists.txt  main.c
Lab2/src_lib_1/: CMakeLists.txt  task1_func.c
Lab2/src_lib_2/: CMakeLists.txt  task2_func.c
Lab3/: CMakeLists.txt
Lab3/Include/: head.h
Lab3/src_exe/: CMakeLists.txt  main.c
Lab3/src_lib_do_while/: CMakeLists.txt  func.c  task1.c  task2.c  task3.c  task4.c  task5.c
Lab3/src_lib_for/: CMakeLists.txt  func.c  task1.c  task2.c  task3.c  task4.c  task5.c
Lab3/src_lib_while/: CMakeLists.txt  func.c  task1.c  task2.c  task3.c  task4.c  task5.c
Lab4/: CMakeLists.txt
Lab4/include/: head.h
Lab4/src_exe/: CMakeLists.txt  main.c
Lab4/src_lib/: CMakeLists.txt  function.c  readArray.c  sort.c  sortStackArray.c  writeArray.c
Lab5/: CMakeLists.txt
Lab5/src_exe/: CMakeLists.txt  main.c
Lab5/src_lib/: CMakeLists.txt  task1.c  task3.c  task4.c
Lab6/: CMakeLists.txt
Lab6/Lab6/: CMakeLists.txt  Lab6.c
Lab7/: CMakeLists.txt
Lab7/Task1/include/: head.h
Lab7/Task1/src_exe/: CMakeLists.txt  main.c
Lab7/Task1/src_lib/: CMakeLists.txt  function.c
Lab7/Task2/include/: head.h
Lab7/Task2/src_exe/: CMakeLists.txt  main.c
Lab7/Task2/src_lib/: CMakeLists.txt  readArray.c  sort.c  sortHeapArray.c  writeArray.c
Lab7/Task3/: CMakeLists.txt
Lab7/Task3/include/: head.h
Lab7/Task3/src_exe/: CMakeLists.txt  main.c
Lab7/Task3/src_lib/: CMakeLists.txt  delete.c  find.c  insert.c  strcat.c  strcpy.c
