# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("Lab1")

# Include sub-projects.
add_subdirectory ("Task1")
add_subdirectory ("Task2")
add_subdirectory ("Task3")
add_subdirectory ("Task4")
add_subdirectory ("Task5")
add_subdirectory ("Task6")
add_subdirectory ("Task7")
add_subdirectory ("Task8")
