# CMakeList.txt : CMake project for Lab3, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_subdirectory("src_lib_for")
add_subdirectory("src_lib_while")
add_subdirectory("src_lib_do_while")
add_subdirectory("src_exe")


# TODO: Add tests and install targets if needed.
