# CMakeList.txt: проект CMake для Lab_5; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

Project("Lab5")
add_subdirectory("src_exe")
add_subdirectory("src_lib")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
