# CMakeList.txt : CMake project for Lab1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Task7 "task7_main.c" "task7_func.c" "func.h")
		
# TODO: Add tests and install targets if needed.
